<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">My Nanodegree Apps!</string>
    <string name="toast_launch_message">This button will launch my</string>
    <string name="spotify_streamer_title">Spotify streamer app</string>
    <string name="scores_app_title">football scores app</string>
    <string name="library_app_title">library app</string>
    <string name="build_it_bigger_title">build it bigger app</string>
    <string name="xyz_reader_title">XYZ reader app</string>
    <string name="capstone_title">capstone app</string>
</resources>
